--- a/Cambiar estilos js/index.html
+++ b/Cambiar estilos js/index.html
@@ -65,9 +65,17 @@
     </form>
 
     <div class="To-Do">
-        
+        <label for="do" id="do-label"><p>Que tienes hacer</p>
+            <input type="text" id="do">
+        </label>
+        <button id="btn-do" onclick="agregarto_do()">Enviar</button>
+        <div id="list-do">
+
+        </div>
     </div>
+
     <script src="script.js"></script>
 </body>
 
 </html>
+
